test data for XML-RPC

--- a/trunk/src/java/buildmonitor/project.properties
+++ b/trunk/src/java/buildmonitor/project.properties
@@ -1,1 +1,5 @@
 maven.repo.remote = file:${basedir}/lib
+
+maven.junit.fork = yes
+expected_xmlrpc_fetch_all_reply = ${basedir}/../../../testdata/expected_xmlrpc_fetch_all_reply.xml
+maven.junit.sysproperties = expected_xmlrpc_fetch_all_reply
