--- a/trunk/client/DotNet/MonoTray/Makefile.MonoTray
+++ b/trunk/client/DotNet/MonoTray/Makefile.MonoTray
@@ -7,7 +7,8 @@ SOURCES = \
 ./SettingsWindow.cs \
 ./ProjectWindow.cs \
 ./TrayIcon.cs \
-./Settings.cs
+./Settings.cs \
+./ConnectionDialog.cs
 
 RESOURCES = \
 ./gui.glade \
@@ -22,7 +23,8 @@ RESOURCES_BUILD = $(foreach res,$(RESOURCES), $(addprefix -resource:,$(res)),$(n
 PKG_REFERENCES = \
 gtk-sharp \
 glade-sharp \
-gconf-sharp
+gconf-sharp \
+chicken
 
 PKG_REFERENCES_BUILD = $(addprefix -pkg:, $(PKG_REFERENCES))
 
