--- a/trunk/client/DotNet/MonoTray/Makefile.MonoTray
+++ b/trunk/client/DotNet/MonoTray/Makefile.MonoTray
@@ -24,11 +24,18 @@ PKG_REFERENCES = \
 gtk-sharp \
 glade-sharp \
 gconf-sharp \
-chicken
+art-sharp
 
 PKG_REFERENCES_BUILD = $(addprefix -pkg:, $(PKG_REFERENCES))
 
 PKG_REFERENCES_CHECK = $(addsuffix .pkgcheck, $(PKG_REFERENCES))
+
+SYSTEM_REFERENCES = \
+System.Security.dll
+
+SYSTEM_REFERENCES_BUILD = $(addprefix -r:, $(SYSTEM_REFERENCES))
+
+SYSTEM_REFERENCES_CHECK = $(addsuffix .check, $(SYSTEM_REFERENCES))
 
 ASSEMBLY_REFERENCES = \
 "./egg-sharp.dll"
@@ -46,13 +53,13 @@ MCS_OPTIONS =
 all: MonoTray.exe
 
 MonoTray.exe: $(SOURCES) $(RESOURCES)
-	mcs $(MCS_OPTIONS) -target:exe -out:"MonoTray.exe" $(RESOURCES_BUILD) $(PKG_REFERENCES_BUILD) $(ASSEMBLY_REFERENCES_BUILD) $(PROJECT_REFERENCES_BUILD) $(SOURCES) \
+	mcs $(MCS_OPTIONS) -target:exe -out:"MonoTray.exe" $(RESOURCES_BUILD) $(PKG_REFERENCES_BUILD) $(ASSEMBLY_REFERENCES_BUILD) $(PROJECT_REFERENCES_BUILD) $(SYSTEM_REFERENCES_BUILD) $(SOURCES) \
 	&& cp "MonoTray.exe" ../build/bin/.
 
 clean:
 	rm -f MonoTray.exe
 
-depcheck: PKG_depcheck 
+depcheck: PKG_depcheck SYSTEM_depcheck
 
 PKG_depcheck: $(PKG_REFERENCES_CHECK)
 
@@ -65,3 +72,13 @@ PKG_depcheck: $(PKG_REFERENCES_CHECK)
 		exit 1; \
 	fi
 
+SYSTEM_depcheck: $(SYSTEM_REFERENCES_CHECK)
+
+%.check:
+	@echo -n Checking for $(subst .check,,$@)...
+	@if [ ! -e `pkg-config --variable=libdir mono`/mono/1.0/$(subst .check,,$@) ]; then \
+		echo no; \
+		exit 1; \
+	else \
+		echo yes; \
+	fi
