--- a/trunk/client/DotNet/DamageControlClientNet/DamageControlClientNet.csproj
+++ b/trunk/client/DotNet/DamageControlClientNet/DamageControlClientNet.csproj
@@ -76,7 +76,7 @@
                 />
                 <Reference
                     Name = "System.XML"
-                    AssemblyName = "System.XML"
+                    AssemblyName = "System.Xml"
                     HintPath = "..\..\..\..\..\..\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
                 />
                 <Reference
@@ -105,6 +105,11 @@
                 />
                 <File
                     RelPath = "ProjectStatus.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "ProjectVisitor.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
