o Added support for RSS o Added 1st cut of Rss Service o Moved over some tracker and web_scm stuff from DC o Various smaller fixes

--- a/rscm/trunk/Rakefile
+++ b/rscm/trunk/Rakefile
@@ -31,5 +31,6 @@ Rake::RDocTask.new { |rdoc|
   rdoc.options << '--line-numbers --inline-source --main README'
   rdoc.rdoc_files.include('README')
   rdoc.rdoc_files.include('lib/**/*.rb')
+  rdoc.rdoc_files.include('docs/**/*.rd')
 }
 
