--- a/rscm/trunk/test/rscm/changesets.yaml
+++ b/rscm/trunk/test/rscm/changesets.yaml
@@ -4,8 +4,11 @@ changesets:
     changes: 
       - !ruby/object:RSCM::Change 
         developer: rinkrank
-        message: "Disable searching - it doesn't work after the build history was refactored (it
-          would probably work, but it would be too i/o/cpu hungry)
+        message: "En to
+
+          tre buksa 
+
+          ned
 
           "
         path: server/damagecontrol/web/AbstractAdminServlet.rb
@@ -15,18 +18,24 @@ changesets:
         time: 2004-11-30 04:52:24 Z
       - !ruby/object:RSCM::Change 
         developer: rinkrank
-        message: "Disable searching - it doesn't work after the build history was refactored (it
-          would probably work, but it would be too i/o/cpu hungry)
+        message: "En to
+
+          tre buksa 
+
+          ned
 
           "
         path: server/damagecontrol/web/ProjectServlet.rb
         previous_revision: "1.71"
         revision: "1.72"
         status: MODIFIED
-        time: 2004-11-30 04:52:24 Z
+        time: 2004-11-30 04:53:23 Z
     developer: rinkrank
-    message: "Disable searching - it doesn't work after the build history was refactored (it
-      would probably work, but it would be too i/o/cpu hungry)
+    message: "En to
+
+      tre buksa 
+
+      ned
 
       "
     revision: MAIN:rinkrank:20041130045224
