--- a/rscm/trunk/lib/rscm/example.yaml
+++ b/rscm/trunk/lib/rscm/example.yaml
@@ -7,13 +7,13 @@ checkout_dir: target/ngst
 interval: 10
 port: 9090
 scm: !ruby/object:RSCM::StarTeam
-  user_name: jimmitchell
-  password: gandalf1
-  server_name: "192.168.254.21"
-  server_port: 49201
-  project_name: "NGST Application"
-  view_name: "NGST Application"
-  folder_name: "java"
+  st_user_name: jimmitchell
+  st_password: gandalf1
+  st_server_name: "192.168.254.21"
+  st_server_port: 49201
+  st_project_name: "NGST Application"
+  st_view_name: "NGST Application"
+  st_folder_name: "java"
 scm_web: !ruby/object:RSCM::SCMWeb::ViewCVS
   view_cvs_url: http://cvs.damagecontrol.codehaus.org/
 tracker: !ruby/object:RSCM::Tracker::JIRA
