ant could be "ant.sh" OR "ant"

--- a/rscm/trunk/Rakefile
+++ b/rscm/trunk/Rakefile
@@ -40,7 +40,8 @@ rd = Rake::RDocTask.new { |rdoc|
 }
 
 task :ant do |t|
-  ant = RUBY_PLATFORM == "i386-mswin32" ? "ant.bat" : "ant.sh"
+  ant = RUBY_PLATFORM == "i386-mswin32" ? "ant.bat" : system("which ant.sh") ? "ant.sh" : "ant" 
+  puts ant
   IO.popen("#{ant} -f ext/java/build.xml clean jar") do |io|
     io.each_line do |line|
       puts line
