--- a/rscm/trunk/Rakefile
+++ b/rscm/trunk/Rakefile
@@ -21,6 +21,7 @@ task :default => [ :all ]
 # To run a specific test: rake test TEST=path/to/test
 fl = FileList.new('test/**/*_test.rb')
 fl.exclude('test/**/mooky*.rb')
+fl.exclude('test/**/monotone*.rb') # Incomplete/unsupported for now - reactivate when more complete!
 fl.exclude('test/**/darcs*.rb')    # Incomplete/unsupported for now - reactivate when more complete!
 fl.exclude('test/**/perforce*.rb') # Incomplete/unsupported for now - reactivate when more complete!
 fl.exclude('test/**/starteam*.rb') # Too bloody hard to test without a StarTeam server license! Tested ad-hoc.
