--- a/trunk/damagecontrol/lib/.project
+++ b/trunk/damagecontrol/lib/.project
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>dc_lib</name>
+	<name>damagecontrol_lib</name>
 	<comment></comment>
 	<projects>
+		<project>rscm_lib</project>
+		<project>rscm_test</project>
 	</projects>
 	<buildSpec>
 	</buildSpec>
