--- a/rscm/Rakefile
+++ b/rscm/Rakefile
@@ -113,7 +113,7 @@ task :publish do
 
   RUBYFORGE_GROUP_ID = 490
   RUBYFORGE_PACKAGE_ID = 552
-  RUBYFORGE_RELEASE_NAME = "tralalarrqqq"
+  RUBYFORGE_RELEASE_NAME = "rakedrelease"
 
   Rake::RubyForgeFilePublisher.new(
     RUBYFORGE_GROUP_ID, 
