--- a/trunk/damagecontrol/Rakefile
+++ b/trunk/damagecontrol/Rakefile
@@ -70,12 +70,15 @@ else
 
     #### Dependencies and requirements.
 
-    s.add_dependency('log4r', '> 1.0.4')
-    s.add_dependency('rscm')
-    s.add_dependency('needle')
+    s.add_dependency('rscm', '0.2.0')
+    s.add_dependency('rails', '0.10.0')
+    s.add_dependency('log4r', '1.0.5')
+    s.add_dependency('needle', '1.2.0')
+    s.add_dependency('jabber4r', '0.7.0')
+    s.add_dependency('ruby-growl', '1.0.0')
 #    s.add_dependency('rgl')
     #s.requirements << ""
-
+ 
     #### Which files are to be included in this gem?  Everything!  (Except CVS directories.)
 
     s.files = PKG_FILES.to_a
