--- a/damagecontrol/Rakefile
+++ b/damagecontrol/Rakefile
@@ -17,6 +17,8 @@ task :default => [ :all ]
 # Run the unit tests
 # To run a specific test: rake test TEST=path/to/test
 fl = FileList.new('test/**/*_test.rb')
+# These requires us to be online:
+fl.exclude('test/**/jabber_test.rb')
 # Work around annoying LoadError - run this test alone
 fl.exclude('test/**/email_test.rb')
 fl.exclude('test/functional/*')
