--- a/damagecontrol/Rakefile
+++ b/damagecontrol/Rakefile
@@ -78,8 +78,8 @@ else
     s.add_dependency('needle', '1.2.0')
     s.add_dependency('jabber4r', '0.7.0')
     s.add_dependency('ruby-growl', '1.0.0')
-
-#    s.add_dependency('rgl')
+    s.add_dependency('ruby-json')
+    s.add_dependency('rgl')
     #s.requirements << ""
  
     #### Which files are to be included in this gem?  Everything!  (Except CVS directories.)
