Made build requests persistent and added possibility to request build from web interface.

--- a/damagecontrol/Rakefile
+++ b/damagecontrol/Rakefile
@@ -27,7 +27,7 @@ Rake::TestTask.new { |t|
   t.libs << "test" 
   # We need some of the test utils from rscm. add them in 2 ways so they can be found when built by dc too.
   t.libs << File.expand_path(File.dirname(__FILE__) + "/../rscm/test") << File.expand_path(File.dirname(__FILE__) + "/../rscm/lib")
-  t.libs << File.expand_path(File.dirname(__FILE__) + "/../../RSCM/checkout/test") << File.expand_path(File.dirname(__FILE__) + "/../../RSCM/checkout/lib")
+  t.libs << File.expand_path(File.dirname(__FILE__) + "/../../RSCM/working_copy/test") << File.expand_path(File.dirname(__FILE__) + "/../../RSCM/working_copy/lib")
   t.test_files = fl
   t.verbose = true
 }
