--- a/test/fixtures/builds.yml
+++ b/test/fixtures/builds.yml
@@ -1,10 +1,10 @@
 build_1:
   id: 1
-  status: COMPLETE 
   stdout: oh no
   stderr: oh yes 
   pid: 1971
-  exitstatus: 5
-  reason: parce que je le vaut bien
+  exitstatus: 0
+  state: !ruby/object:Build::Successful {}
+  reason: SCM_POLLED
   timepoint: 1971-02-28 23:45:00 Z
   revision_id: 1
