--- a/branches/damagecontrol_active_record/test/fixtures/revision_files.yml
+++ b/branches/damagecontrol_active_record/test/fixtures/revision_files.yml
@@ -13,3 +13,17 @@ revision_file_1_2:
   path: see/how/they/run.rb 
   previous_native_revision_identifier: 1.2.3
   native_revision_identifier: 1.2.4
+rails_1735_indifferent_access:
+  id: 1736
+  revision_id: 1735
+rails_1735_load_error:
+  id: 1737
+  revision_id: 1735
+rails_1735_cgi:
+  id: 1738
+  revision_id: 1735
+  status: MODIFIED
+  path: lib/active_support/core_ext/cgi.rb
+rails_1735_dependencies:
+  id: 1739
+  revision_id: 1735
